--- a/package.json
+++ b/package.json
@@ -6,15 +6,23 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prestart": "npm run build", 
+    "start": "vite preview"  
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.1"
+    "react-router-dom": "^6.22.1",
+    "bootstrap": "^5.3.0",
+    "@popperjs/core": "^2.11.8",      
+    "react-bootstrap": "^2.9.0",       
+    "sass": "^1.69.5"                  
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "@types/react": "^18.2.55",   
+    "@types/react-dom": "^18.2.19"   
   }
 }
